--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,17 @@
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
-        android:gravity="center_horizontal">
+        android:gravity="center_horizontal"
+        android:id="@+id/linearLayout">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/Score"
+            android:layout_gravity="center_horizontal"
+            android:layout_margin="16dp"
+            android:textColor="#33e81b"
+            android:textSize="24sp" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -62,4 +72,5 @@
                 android:textColor="#ffffff" />
         </LinearLayout>
     </LinearLayout>
+
 </RelativeLayout>
