--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -71,6 +71,34 @@
                 android:layout_margin="8dp"
                 android:textColor="#ffffff" />
         </LinearLayout>
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="8dp"
+            android:gravity="center">
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/hint"
+                android:id="@+id/hintActivityButton"
+                android:layout_marginRight="4dp"
+                android:layout_marginLeft="4dp"
+                android:textColor="#fee401"
+                android:background="?android:attr/selectableItemBackground" />
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/cheat"
+                android:id="@+id/cheatActivityButton"
+                android:layout_marginLeft="4dp"
+                android:layout_marginRight="4dp"
+                android:background="?android:attr/selectableItemBackground"
+                android:textColor="#e91515" />
+        </LinearLayout>
     </LinearLayout>
 
 </RelativeLayout>
