--- a/app/src/main/res/layout/activity_cheat.xml
+++ b/app/src/main/res/layout/activity_cheat.xml
@@ -19,7 +19,8 @@
         android:layout_alignParentRight="false"
         android:layout_centerInParent="true"
         android:textColor="#fd0202"
-        android:background="?android:attr/selectableItemBackground" />
+        android:background="?android:attr/selectableItemBackground"
+        android:textSize="16sp" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -29,5 +30,7 @@
         android:layout_alignParentLeft="false"
         android:layout_alignParentStart="false"
         android:layout_centerInParent="true"
-        android:layout_marginTop="16dp" />
+        android:layout_marginTop="16dp"
+        android:textSize="24sp" />
+
 </RelativeLayout>
