--- a/app/src/main/res/layout/activity_hint.xml
+++ b/app/src/main/res/layout/activity_hint.xml
@@ -18,7 +18,8 @@
         android:layout_alignParentStart="false"
         android:layout_centerInParent="true"
         android:background="?android:attr/selectableItemBackground"
-        android:textColor="#e8d718" />
+        android:textColor="#fec301"
+        android:textSize="16sp" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -28,5 +29,6 @@
         android:layout_alignParentLeft="false"
         android:layout_alignParentStart="false"
         android:layout_marginTop="16dp"
-        android:layout_centerInParent="true" />
+        android:layout_centerInParent="true"
+        android:textSize="24sp" />
 </RelativeLayout>
